--- a/app/index-async.html.template
+++ b/app/index-async.html.template
@@ -37,6 +37,7 @@
   </script>
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css">
+  <link href='http://fonts.googleapis.com/css?family=Rosario' rel='stylesheet' type='text/css'>
 </head>
 <body ng-cloak>
   <ul class="menu">
